@@ -47,7 +47,6 @@ import net.minecraft.advancements.Advancement;
 import net.minecraft.advancements.AdvancementManager;
 import net.minecraft.advancements.FunctionManager;
 import net.minecraft.block.Block;
-import net.minecraft.block.BlockFarmland;
 import net.minecraft.block.BlockLiquid;
 import net.minecraft.block.material.Material;
 import net.minecraft.block.state.IBlockState;
@@ -57,6 +56,7 @@ import net.minecraft.command.FunctionObject;
 import net.minecraft.enchantment.Enchantment;
 import net.minecraft.enchantment.EnchantmentHelper;
 import net.minecraft.entity.Entity;
+import net.minecraft.entity.EntityLiving;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.item.EntityItem;
 import net.minecraft.entity.item.EntityMinecartContainer;
@@ -169,9 +169,6 @@ import javax.annotation.Nullable;
 
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.io.IOUtils;
-import org.spongepowered.asm.mixin.extensibility.IMixinInfo;
-import org.spongepowered.asm.mixin.transformer.ClassInfo;
-import org.spongepowered.asm.mixin.transformer.MixinInfo;
 
 public class ForgeHooks
 {
@@ -196,7 +193,7 @@ public class ForgeHooks
     @Nonnull
     public static ItemStack getGrassSeed(Random rand, int fortune)
     {
-        if (seedList.size() == 0)
+        if (seedList.isEmpty())
         {
             return ItemStack.EMPTY; //Some bad mods hack in and empty our list, so lets not hard crash -.-
         }
@@ -578,9 +575,20 @@ public class ForgeHooks
     //Optifine Helper Functions u.u, these are here specifically for Optifine
     //Note: When using Optifine, these methods are invoked using reflection, which
     //incurs a major performance penalty.
+    @Deprecated(since = "15.24.0.3026")
     public static void onLivingSetAttackTarget(EntityLivingBase entity, EntityLivingBase target)
     {
         MinecraftForge.EVENT_BUS.post(new LivingSetAttackTargetEvent(entity, target));
+    }
+
+    public static EntityLivingBase onLivingSetAttackTarget(EntityLiving living, @Nullable EntityLivingBase target)
+    {
+        LivingSetAttackTargetEvent event = new LivingSetAttackTargetEvent(living, target);
+        if (MinecraftForge.EVENT_BUS.post(event))
+        {
+            return living.getAttackTarget();
+        }
+        return event.getTarget();
     }
 
     public static boolean onLivingUpdate(EntityLivingBase entity)
@@ -660,7 +668,7 @@ public class ForgeHooks
         PlayerEvent.Visibility event = new PlayerEvent.Visibility(player);
         MinecraftForge.EVENT_BUS.post(event);
         double value = event.getVisibilityModifier() * xzDistance;
-        return value >= maxXZDistance ? maxXZDistance : value;
+        return Math.min(value, maxXZDistance);
     }
 
     public static boolean isLivingOnLadder(@Nonnull IBlockState state, @Nonnull World world, @Nonnull BlockPos pos, @Nonnull EntityLivingBase entity)
@@ -768,7 +776,7 @@ public class ForgeHooks
 
             // Append the previous left overs.
             String part = string.substring(lastEnd, start);
-            if (part.length() > 0)
+            if (!part.isEmpty())
             {
                 if (ichat == null)
                     ichat = new TextComponentString(part);
@@ -817,7 +825,7 @@ public class ForgeHooks
         String end = string.substring(lastEnd);
         if (ichat == null)
             ichat = new TextComponentString(end);
-        else if (end.length() > 0)
+        else if (!end.isEmpty())
             ichat.appendText(string.substring(lastEnd));
         return ichat;
     }
@@ -924,7 +932,7 @@ public class ForgeHooks
             }
             else if (blockSnapshots.size() == 1)
             {
-                placeEvent = ForgeEventFactory.onPlayerBlockPlace(player, blockSnapshots.get(0), side, hand);
+                placeEvent = ForgeEventFactory.onPlayerBlockPlace(player, blockSnapshots.getFirst(), side, hand);
             }
 
             if (placeEvent != null && placeEvent.isCanceled())
@@ -1022,7 +1030,7 @@ public class ForgeHooks
         return ret;
     }
 
-    private static ThreadLocal<EntityPlayer> craftingPlayer = new ThreadLocal<EntityPlayer>();
+    private static final ThreadLocal<EntityPlayer> craftingPlayer = new ThreadLocal<>();
     public static void setCraftingPlayer(EntityPlayer player)
     {
         craftingPlayer.set(player);
@@ -1161,7 +1169,7 @@ public class ForgeHooks
         MinecraftForge.EVENT_BUS.post(new PlayerInteractEvent.LeftClickEmpty(player));
     }
 
-    private static ThreadLocal<Deque<LootTableContext>> lootContext = new ThreadLocal<Deque<LootTableContext>>();
+    private static final ThreadLocal<Deque<LootTableContext>> lootContext = new ThreadLocal<>();
     private static LootTableContext getLootTableContext()
     {
         LootTableContext ctx = lootContext.get().peek();
@@ -1211,7 +1219,7 @@ public class ForgeHooks
         public final boolean custom;
         public int poolCount = 0;
         public int entryCount = 0;
-        private HashSet<String> entryNames = Sets.newHashSet();
+        private final HashSet<String> entryNames = Sets.newHashSet();
 
         private LootTableContext(ResourceLocation name, boolean custom)
         {
@@ -1396,12 +1404,12 @@ public class ForgeHooks
                     }
                     catch (JsonParseException jsonparseexception)
                     {
-                        FMLLog.log.error("Parsing error loading built-in advancement " + key, (Throwable)jsonparseexception);
+                        FMLLog.log.error("Parsing error loading built-in advancement {}", key, jsonparseexception);
                         return false;
                     }
                     catch (IOException ioexception)
                     {
-                        FMLLog.log.error("Couldn't read advancement " + key + " from " + file, (Throwable)ioexception);
+                        FMLLog.log.error("Couldn't read advancement {} from {}", key, file, ioexception);
                         return false;
                     }
                     finally
@@ -1427,13 +1435,13 @@ public class ForgeHooks
         if (type == ConnectionType.VANILLA)
         {
             IForgeRegistry<IRecipe> vanilla = RegistryManager.VANILLA.getRegistry(IRecipe.class);
-            if (recipes.size() > 0)
-                recipes = recipes.stream().filter(e -> vanilla.containsValue(e)).collect(Collectors.toList());
-            if (display.size() > 0)
-                display = display.stream().filter(e -> vanilla.containsValue(e)).collect(Collectors.toList());
+            if (!recipes.isEmpty())
+                recipes = recipes.stream().filter(vanilla::containsValue).collect(Collectors.toList());
+            if (!display.isEmpty())
+                display = display.stream().filter(vanilla::containsValue).collect(Collectors.toList());
         }
 
-        if (recipes.size() > 0 || display.size() > 0)
+        if (!recipes.isEmpty() || !display.isEmpty())
             connection.sendPacket(new SPacketRecipeBook(state, recipes, display, isGuiOpen, isFilteringCraftable));
     }
 
@@ -1529,47 +1537,4 @@ public class ForgeHooks
         return id;
     }
 
-    public static String gatherMixinInfo(Throwable throwable){
-        StackTraceElement[] stacktrace = throwable.getStackTrace();
-        if (stacktrace.length > 0) {
-            try {
-                StringBuilder mixinMetadataBuilder = null;
-                ObjectOpenHashSet<String> classes = new ObjectOpenHashSet<>();
-                for (StackTraceElement stackTraceElement : stacktrace) {
-                    classes.add(stackTraceElement.getClassName());
-                }
-                for (String className : classes) {
-                    ClassInfo classInfo = ClassInfo.fromCache(className);
-                    if (classInfo != null) {
-                        java.util.Set<MixinInfo> mixinInfos = classInfo.getMixins();
-                        if (!mixinInfos.isEmpty()) {
-                            if (mixinMetadataBuilder == null) {
-                                mixinMetadataBuilder = new StringBuilder("\n(MixinBooter) Mixins in Stacktrace:");
-                            }
-                            mixinMetadataBuilder.append("\n\t");
-                            mixinMetadataBuilder.append(className);
-                            mixinMetadataBuilder.append(":");
-                            for (IMixinInfo mixinInfo : mixinInfos) {
-                                mixinMetadataBuilder.append("\n\t\t");
-                                mixinMetadataBuilder.append(mixinInfo.getClassName());
-                                mixinMetadataBuilder.append(" (");
-                                mixinMetadataBuilder.append(mixinInfo.getConfig().getName());
-                                mixinMetadataBuilder.append(")");
-                            }
-                        }
-                    }
-                }
-
-                if (mixinMetadataBuilder == null) {
-                    return "No Mixin Metadata is found in the Stacktrace.\n";
-                } else {
-                    return mixinMetadataBuilder.toString();
-                }
-            } catch (Throwable t) {
-                return "Failed to find Mixin Metadata in Stacktrace:\n" + t;
-            }
-        }
-
-        return "";
-    }
 }
